--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -17,10 +17,10 @@
   <link rel="manifest" href="/index.webmanifest">
   
   
-  <link rel="icon" type="image/png" href="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_3.png">
-  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_3.png">
+  <link rel="icon" type="image/png" href="/media/icon_hu8d4d54d67ed9bdb229f4a524aeda970f_538549_32x32_fill_lanczos_center_3.png">
+  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu8d4d54d67ed9bdb229f4a524aeda970f_538549_192x192_fill_lanczos_center_3.png">
 
-  <link rel="canonical" href="https://example.com/slides/example/">
+  <link rel="canonical" href="http://fishsizeproject.org/slides/example/">
 
   <title>Slides | The Fish Size Project</title>
 
